@@ -1,3 +1,11 @@
+2007-10-30 Nick Hilliard <nick@inex.ie>
+
+	* bgp_main.c: Add 'listenon' argument, to pass address to bind
+	  to.
+	* bgp_network.c: (bgp_socket) Extend to take bind address.
+	* bgpd.c: (bgp_init) Pass stored address.
+	* bgpd.h: (struct bgp_master) storage for bind address
+
 2007-09-27 Paul Jakma <paul.jakma@sun.com>
 
 	* bgp_aspath.c: (assegment_normalise) remove duplicates from
